Fix 2 click zooming issue on iPhone

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,8 @@ body {
   font-family: "Montserrat", sans-serif;
   font-size: 1.6rem;
   margin: auto;
-  max-width: 60rem;
+  max-width: 480px;
+  height: 100vh;
   color: #d8edea;
   background: radial-gradient(
     circle,
@@ -26,7 +27,7 @@ body {
 
 header {
   text-align: center;
-  margin-top: 3rem;
+  margin-top: 1.0rem;
 }
 
 div {
@@ -40,7 +41,7 @@ div {
 }
 
 .t-big {
-  font-size: 1.5em;
+  font-size: 1.0em;
 }
 
 .t-wide {
